deploy: e956e8a90c295d066e8d41cb5ab386727964c9d4

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" dir="ltr">
+<html lang="ko-KR" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>window.__VP_HASH_MAP__=JSON.parse("{\"index.md\":\"DugsMAFz\",\"problems_index.md\":\"Bn8K7xfC\",\"theory_index.md\":\"ADuPdiWe\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"algo-wiki\",\"description\":\"A VitePress Site\",\"base\":\"/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"홈\",\"link\":\"/\"},{\"text\":\"이론\",\"link\":\"/theory\"},{\"text\":\"문제풀이\",\"link\":\"/problems\"}],\"sidebar\":{\"theory\":[{\"text\":\"자료구조\",\"items\":[{\"text\":\"Markdown Examples\",\"link\":\"/markdown-examples\"},{\"text\":\"Runtime API Examples\",\"link\":\"/api-examples\"}]},{\"text\":\"알고리즘\",\"items\":[{\"text\":\"Markdown Examples\",\"link\":\"/markdown-examples\"},{\"text\":\"Runtime API Examples\",\"link\":\"/api-examples\"}]}]},\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/vuejs/vitepress\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
+    <script>window.__VP_HASH_MAP__=JSON.parse("{\"index.md\":\"DugsMAFz\",\"problems_index.md\":\"Bn8K7xfC\",\"theory_index.md\":\"ADuPdiWe\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"ko-KR\",\"dir\":\"ltr\",\"title\":\"algo-wiki\",\"description\":\"A VitePress Site\",\"base\":\"/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"홈\",\"link\":\"/\"},{\"text\":\"이론\",\"link\":\"/theory\"},{\"text\":\"문제풀이\",\"link\":\"/problems\"}],\"sidebar\":{\"theory\":[{\"text\":\"자료구조\",\"items\":[{\"text\":\"Markdown Examples\",\"link\":\"/markdown-examples\"},{\"text\":\"Runtime API Examples\",\"link\":\"/api-examples\"}]},{\"text\":\"알고리즘\",\"items\":[{\"text\":\"Markdown Examples\",\"link\":\"/markdown-examples\"},{\"text\":\"Runtime API Examples\",\"link\":\"/api-examples\"}]}]},\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/vuejs/vitepress\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
     
   </body>
 </html>
